Added GameMode Command.